trying to implement different means of monitoring

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,3 +7,36 @@ generator.probabilities {
 generator.late_event {
   max: 5000
 }
+
+generator.topic {
+  measures: sample_measures
+}
+
+akka.kafka.producer {
+  # Tuning parameter of how many sends that can run in parallel.
+  parallelism = 100
+
+  # How long to wait for `KafkaProducer.close`
+  close-timeout = 60s
+
+  # Properties defined by org.apache.kafka.clients.producer.ProducerConfig
+  # can be defined in this configuration section.
+  kafka-clients {
+    bootstrap.servers = "localhost:9092"
+  }
+}
+
+
+kamon.metric.filters {
+  akka-actor {
+    includes = [ "**" ]
+  }
+
+  akka-dispatcher {
+    includes = [ "**" ]
+  }
+
+  akka-router {
+    includes = [ "**" ]
+  }
+}
