Prototyped actors instead of streams as a source

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -29,11 +29,11 @@ akka.kafka.producer {
 
 kamon.metric.filters {
   akka-actor {
-    includes = [ "**" ]
+    includes = [ "default/user/**" ]
   }
 
   akka-dispatcher {
-    includes = [ "**" ]
+    includes = [ "default/**" ]
   }
 
   akka-router {
