Actor-based generator

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -8,6 +8,11 @@ generator.late_event {
   max: 5000
 }
 
+generator {
+  num-devices: 5000
+  frequency: 500ms
+}
+
 generator.topic {
   measures: sample_measures
 }
@@ -29,7 +34,7 @@ akka.kafka.producer {
 
 kamon.metric.filters {
   akka-actor {
-    includes = [ "default/user/**" ]
+    includes = [ "default/user/StreamSupervisor**" ]
   }
 
   akka-dispatcher {
